--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,9 +56,9 @@ a {
 
 .btn {
   padding: 12px 24px;
-  color: white;
+  color: black;
   display: inline-block;
-  opacity: 1;
+  opacity: 0.5;
   border-radius: 4px;
 }
 
