--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ a {
 }
 
 .signup {
-  background-color: #ff0000;
+  background-color: #3b5998;
 }
 
 .facebook {
@@ -56,7 +56,7 @@ a {
 
 .btn {
   padding: 12px 24px;
-  color: black;
+  color: #ffffff;
   display: inline-block;
   opacity: 0.5;
   border-radius: 4px;
